<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent" android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" android:transitionGroup="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:context=".ChooseApplication"
                    tools:showIn="@layout/activity_choose_application">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/my_nano_degree_aps"
                    android:textColor="@color/material_grey_900"
                    android:textSize="@dimen/abc_text_size_large_material"/>

            <Button style="@style/applicationButton"
                    android:onClick="startSpotifyStreamerApp"
                    android:text="@string/spotify_streamer"/>

            <Button style="@style/applicationButton"
                    android:onClick="startFootballScoresApp"
                    android:text="@string/football_scores_app"/>

            <Button style="@style/applicationButton"
                    android:onClick="startLibraryApp"
                    android:text="@string/library_app"/>

            <Button style="@style/applicationButton"
                    android:onClick="startBuildItBiggerApp"
                    android:text="@string/build_it_bigger"/>

            <Button style="@style/applicationButton"
                    android:onClick="startMyCapstoneApp"
                    android:text="@string/capstone"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>